src/styles/globals.css
/* ... */
.search_where.active {
  visibility: visible !important;
  opacity: 1 !important;
  pointer-events: inherit !important;
}

.cd56ld {
  position: relative;
  z-index: 2;
}

.fix_row {
  display: flex;
  align-items: center;
  gap: 14px;
  padding: 0 1rem !important;
}

.top_fade {
  width: 100%;
  overflow: hidden;
}

.top_fade::before {
  content: "";
  display: block;
  width: 100%;
  height: 100%;
  background: radial-gradient(#d8062251, 20%, #a180e929, #ffffff00, #ffffff00);
  position: absolute;
  z-index: -1;
  top: -12rem;
}

.top_fade img {
  width: 100%;
  height: 100%;
  max-height: 50vh;
  object-fit: contain;
  /* margin-top: 2rem; */
  position: absolute;
  bottom: 10rem;
}

.main_cont {
  position: absolute;
  width: 100%;
}

.head_wel {
  font-size: 20px;
  font-weight: bold;
  line-height: 1;
  color: #6e0311;
  text-align: center;
  display: block;
}

.para {
  font-size: 16px;
  font-weight: 500;
  line-height: 1.5;
  color: #000;
  text-align: center;
  display: block;
  margin-top: 10px;
}

.change_text {
  display: flex;
  flex-direction: column;
  margin-left: 1rem !important;
  color: #000;
}

.mainp {
  display: flex;
  align-items: center;
}

.mainp p {
  background: #d80621;
  background: linear-gradient(81deg, #d80621 0%, #000 62%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  margin: 0;
  padding: 0;
}

.Mainheading {
  font-size: 80px;
  font-weight: bold;
  margin: 0;
  padding: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  max-width: 1920px;
  overflow: hidden;
  margin-top: 1.5rem;
}

.Mainheading img {
  height: 60px;
}

.word {
  opacity: 0;
  transition: opacity 0.3s ease-in-out;
  position: absolute;
}

.visible {
  opacity: 1;
  position: relative;
}

.store_area {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 20px;
  margin-top: 3.5rem;
}

.store_area img {
  height: 50px;
}

.search_btns {
  display: flex;
  align-items: center;
  gap: 6px;
  margin: 0;
  padding: 0 8px;
}

.search_button {
  background: linear-gradient(#191919, #2b2b2b);
  border-radius: 50px;
  border: none;
  outline: none;
  display: flex;
  align-items: center;
  gap: 1rem;
  padding: 14px 1.4rem;
  width: fit-content;
  color: #fff;
  font-size: 16px;
  justify-content: center;
}

.search_button img {
  height: 22px;
}

.search_with_ai {
  background: linear-gradient(#a180e9, #9c6991);
  border-radius: 100%;
  border: none;
  outline: none;
  display: flex;
  align-items: center;
  justify-content: center;
  min-width: 50px;
  height: 50px;
}

.search_with_ai > img {
  height: 26px;
}

#search-tabpanel {
  padding: 8px;
}

/* section two css  */
.section-two {
  padding: 2rem 5rem;
}

.cont_heading {
  font-size: 45px;
  font-weight: 200;
  color: #000;
  text-transform: capitalize;
}

.cont_heading strong {
  font-weight: 500 !important;
}

.placecard_grid {
  display: flex;
  flex-wrap: wrap;
  gap: 1.5rem;
  justify-content: center;
  align-items: center;
  margin-top: 2rem;
}

.placement_card {
  flex-basis: 32%;
  max-width: 570px;
}

.place_thumb > img {
  aspect-ratio: 6 / 3;
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center;
  border-radius: 15px;
}

.place_heading h4 {
  font-size: 16px;
  font-weight: 600;
  margin-top: 1rem;
  margin-bottom: 0;
  line-height: 1;
}

.place_heading p {
  font-size: 16px;
  font-weight: 400;
  margin-top: 5px;
  margin-bottom: 0;
  line-height: 1.3;
  min-height: 40px;
}

/* place card css */
.place_card_title h2 {
  font-size: 16px;
  font-weight: 600;
  line-height: 1.2;
  color: #000;
  margin: 0;
  padding: 0;
}

.place_card_title p {
  font-size: 16px;
  font-weight: 500;
  line-height: 1.2;
  color: #000000be;
  margin: 0;
  padding: 0;
}

.place_card_title span {
  font-size: 16px;
  font-weight: 500;
  line-height: 1.2;
  color: #000000;
  margin: 0;
  padding: 0;
}

.form_mob {
  display: none;
}

.card_div .slick-prev {
  left: 10px !important;
  z-index: 2;
}

.atm_1w_12kg1i__4c1lm5 {
  cursor: pointer;
}

.card_div .slick-next {
  right: 20px !important;
  z-index: 2;
}

.card_div .slick-dots {
  bottom: 25px !important;
}

.card_div .slick-dots li,
.card_div .slick-dots li button,
.slick-dots li button:before {
  width: 10px !important;
  height: 10px !important;
}

.slick-dots li button:before {
  color: #fff !important;
  text-shadow: 0 0 5px #000;
}

/* partner section css  */
.partner_card {
  width: 250px;
  height: 140px;
}

.partner_card > img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  border-radius: 20px;
  box-shadow: 0 0 20px #00000014;
}

.parters_row {
  display: flex;
  align-items: center;
  gap: 2.5rem;
  margin-top: 3rem;
}

.Joinus_area {
  margin-left: 2rem;
}

.Joinus_area > h2 {
  font-size: 36px;
  font-weight: 600;
  color: #000;
}

.Joinus_area > a {
  display: flex;
  align-items: center;
  gap: 1rem;
  background: linear-gradient(#191919, #2b2b2b);
  border-radius: 50px;
  padding: 1.3rem 2rem;
  color: #fff;
  font-size: 16px;
  font-weight: 500;
  width: fit-content;
}

.DisableElement {
  display: none !important;
  pointer-events: none !important;
}

.atm_jb_idpfg4 {
  min-width: 100px;
}

.form_web {
  transition: 0.5s ease;
}

.StickElement {
  position: fixed;
  top: 10px;
  z-index: 20;
  display: flex;
  align-items: center;
  left: 20rem;
  right: 20rem;
}

.StickElement .form_web {
  margin-top: 0 !important;
}

.StickElement .form_icon {
  display: none;
}

.StickElement .search_button span {
  display: none;
}

.StickElement .search_button {
  border-radius: 100%;
  transition: 0.5s ease;
  min-width: 50px;
  height: 50px;
  padding: 0;
}

.StickElement .atm_j3_1an8f3t {
  max-width: 600px;
}

.StickElement .fix_row {
  padding: 0 2px !important;
}

.lang_tab button {
  color: #00000077;
  border-bottom: 2px solid #dbdbdb;
  border-radius: 0 !important;
}
/* ... */

